--- a/index.html
+++ b/index.html
@@ -3,17 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>承服解决方案</title>
+    <title>承服人力资源数字化解决方案</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+
+    <!-- 页头 -->
+    <div class="relative z-20 bg-white bg-opacity-20 backdrop-blur-md border-b border-gray-300 border-opacity-30">
+        <div class="w-full max-w-7xl mx-auto px-4 py-3">
+            <div class="flex items-center justify-between">
+                <div class="flex items-center  sm:gap-4">
+                    <a href="https://www.cfpeo.com.cn" target="_blank" class="logo-link">
+                        <img src="logo.png" alt="CFPEO Logo" class="header-logo">
+                    </a>
+                </div>
+                <div class="flex items-center">
+                    <a href="tel:400-615-6787" class="text-white font-medium text-xs sm:text-lg"
+                        style="color: #233A71;">400-615-6787</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- 头部区域 -->
     <header class="header">
         <div class="header-content">
             <div class="logo-section">
-                <h1 class="logo">CFPEO</h1>
-                <span class="solutions-text">解决方案</span>
+                <h1 class="logo">承服人力资源数字化解决方案</h1>
+                <span class="solutions-text">数据驱动的HR效能工具</span>
                 <div class="underline"></div>
+            </div>
+            <div class="header-images">
+                <img src="1.png" alt="图片1" class="header-img">
+                <img src="2.png" alt="图片2" class="header-img">
             </div>
         </div>
     </header>
@@ -35,19 +59,15 @@
                                     <div class="feature-text">智能计算</div>
                                 </div>
                                 <div class="feature-item">
-                                    <div class="feature-icon">⚡</div>
-                                    <div class="feature-text">快速响应</div>
-                                </div>
-                                <div class="feature-item">
-                                    <div class="feature-icon">🎯</div>
-                                    <div class="feature-text">精准结果</div>
+                                    <div class="feature-icon">🔗</div>
+                                    <div class="feature-text">多平台合并</div>
                                 </div>
                             </div>
                             <div class="description">
                                 <p>专业的连续劳务个税计算工具，为您提供准确、快速的税务计算服务。</p>
                             </div>
                         </div>
-                        <button class="input-btn" onclick="navigateToCard1()">查看详情</button>
+                        <button class="input-btn" onclick="navigateToCard1()">立即计算</button>
                     </div>
                 </div>
 
@@ -61,41 +81,41 @@
                             <table class="data-table">
                                 <thead>
                                     <tr>
-                                        <th>含税率</th>
-                                        <th>含税率表</th>
-                                        <th>结果</th>
-                                        <th>展示区</th>
+                                        <th>社保项目</th>
+                                        <th>缴费基数</th>
+                                        <th>个人比例</th>
+                                        <th>个人缴费</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>能型球</td>
-                                        <td>19</td>
-                                        <td>27</td>
-                                        <td>¥560</td>
+                                        <td>养老保险</td>
+                                        <td>5000</td>
+                                        <td>8%</td>
+                                        <td>¥400</td>
                                     </tr>
                                     <tr>
-                                        <td>主剪器</td>
-                                        <td>15</td>
-                                        <td>23</td>
-                                        <td>¥420</td>
+                                        <td>医疗保险</td>
+                                        <td>5000</td>
+                                        <td>2%</td>
+                                        <td>¥100</td>
                                     </tr>
                                     <tr>
-                                        <td>烤爱戏</td>
-                                        <td>12</td>
-                                        <td>18</td>
-                                        <td>¥320</td>
+                                        <td>失业保险</td>
+                                        <td>5000</td>
+                                        <td>0.5%</td>
+                                        <td>¥25</td>
                                     </tr>
                                     <tr>
-                                        <td>旅行</td>
-                                        <td>8</td>
-                                        <td>14</td>
-                                        <td>¥280</td>
+                                        <td>工伤保险</td>
+                                        <td>5000</td>
+                                        <td>0%</td>
+                                        <td>¥0</td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
-                        <button class="input-btn" onclick="navigateToCard2()">查看详情</button>
+                        <button class="input-btn" onclick="navigateToCard2()">立即计算</button>
                     </div>
                 </div>
 
@@ -110,12 +130,44 @@
                                 <canvas id="lineChart" width="300" height="180"></canvas>
                             </div>
                         </div>
-                        <button class="input-btn" onclick="navigateToCard3()">查看详情</button>
+                        <button class="input-btn" onclick="navigateToCard3()">立即计算</button>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+
+    <!-- 页脚 -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-services">
+                <a href="https://www.cfpeo.com.cn/" target="_blank" rel="noopener" class="service-link">
+                    <div class="service-item">业务外包</div>
+                </a>
+                <a href="https://www.cfpeo.com.cn/" target="_blank" rel="noopener" class="service-link">
+                    <div class="service-item">岗位外包</div>
+                </a>
+                <a href="https://www.cfpeo.com.cn/" target="_blank" rel="noopener" class="service-link">
+                    <div class="service-item">招聘派遣</div>
+                </a>
+                <a href="https://www.cfpeo.com.cn/" target="_blank" rel="noopener" class="service-link">
+                    <div class="service-item">灵活用工</div>
+                </a>
+                <a href="https://www.cfpeo.com.cn/" target="_blank" rel="noopener" class="service-link">
+                    <div class="service-item">人事外包</div>
+                </a>
+                <a href="https://www.cfpeo.com.cn/" target="_blank" rel="noopener" class="service-link">
+                    <div class="service-item">商保社保</div>
+                </a>
+                <a href="https://www.cfpeo.com.cn/" target="_blank" rel="noopener" class="service-link">
+                    <div class="service-item">单工伤</div>
+                </a>
+                <a href="https://www.cfpeo.com.cn/" target="_blank" rel="noopener" class="service-link">
+                    <div class="service-item">法务服务</div>
+                </a>
+            </div>
+        </div>
+    </footer>
 
 
 
